tests/ui/last_field_not_slice_or_str.stderr
error: Last field must be a dynamically sized type like [T], str, or dyn Trait
 --> tests/ui/last_field_not_slice_or_str.rs:6:11
  |
6 |     data: i32,
  |           ^^^
